...
                              fontFamily: 'Rosario',
                              fontSize: 30,
                              color: Theme.of(context).colorScheme.secondary)),
                      SizedBox(height: sizeBoxHeight + 20),

                      /// Wellbeing
                      Text("How did you feel this week?",
                          style: Theme.of(context).textTheme.bodyText1),
                      Container(
                        child: SliderTheme(
                            key: Key("Welleing Slider"),
                            data: SliderTheme.of(context).copyWith(
                                valueIndicatorShape:
                                    PaddleSliderValueIndicatorShape()),
                            child: slider),
                      ),
                      SizedBox(height: sizeBoxHeight),

                      /// Sputum Color
                      Text(
                          "Over the past 7 days, rate what color your sputum was.",
                          style: Theme.of(context).textTheme.bodyText1,
                          textAlign: TextAlign.center),
                      SliderTheme(
                        data: SliderTheme.of(context).copyWith(
                            valueIndicatorShape:
                                PaddleSliderValueIndicatorShape()),
...
                        ],
                      ),
                      SizedBox(height: sizeBoxHeight),

                      /// MRC Dysonea Scale
                      Container(
                        key: Key('MRCDysoneaScale'),
                        child: Column(
                          children: [
                            Text(
                                "Over the past 7 days, rate your level of breathlessness.",
                                style: Theme.of(context).textTheme.bodyText1,
                                textAlign: TextAlign.center),
                            Padding(
                              padding: const EdgeInsets.fromLTRB(0, 15, 0, 5),
                              child: Container(
                                decoration: BoxDecoration(
...
