...
        ),
      ],
    );

    /// First Page
    PageViewModel firstPage = PageViewModel(
        title: "Welcome",
        image: Image.asset("lib/images/IntroLogo2RegularInline.png"),
        // image: Image.asset("lib/images/launcher/logo.png"),
        bodyWidget: Text(
            "It is recognised that people often forget to look after themselves. \n\n " +
                "NudgeShare has been designed to encourage you to do this. \n \n",
            style: introTextStyle,
            textAlign: TextAlign.center),
        decoration: pageDecoration);

    /// Second Page
    PageViewModel secondPage = PageViewModel(
        title: "How?",
        // image: Image.asset("lib/images/IntroLogo.png"),
        image: Image.asset("lib/images/IntroLogo2RegularInline.png"),
        bodyWidget: Text(
            "Occasionally, it will nudge you to keep in contact with people you like to speak to. " +
                "It will also make you aware of opportunities to share your wellbeing with this group. " +
                "\n\nIf you consent to this, swipe left.",
...
              style: introTextStyle, textAlign: TextAlign.center),
          TextField(
            controller: supportCodeController,
            textAlign: TextAlign.center,
            decoration: InputDecoration(
                border: InputBorder.none,
                hintText: "Enter support code here",
                hintStyle: introHintStyle),
          ),
          Text("If you do not have a support code, type selfhelp",
              style: Theme.of(context).textTheme.caption,
              textAlign: TextAlign.center),
          SizedBox(height: 20),
...
            controller: postcodeController,
            textAlign: TextAlign.center,
            // https://github.com/flutter/flutter/issues/67236
            maxLength: 4, // length of a postcode prefix
            decoration: InputDecoration(
                border: InputBorder.none,
                hintText: "Enter postcode here",
                hintStyle: introHintStyle),
          ),
          RichText(
              text: new TextSpan(children: [
                new TextSpan(
                    text:
...
              _wbCheckNotifMinute,
            ),
        showSkipButton: false,
        next: const Icon(Icons.arrow_forward,
            color: Color.fromARGB(255, 182, 125, 226)),
        done: !doneTapped
            ? const Text('Done',
                style: TextStyle(
                    fontWeight: FontWeight.w600,
                    color: Color.fromARGB(255, 182, 125, 226)))
            : CircularProgressIndicator(),
        onChange: (int _) => _dismisKeyboard(),
        dotsDecorator: dotIndicatorSettings);
...
